[package]
name = "mrb-src"
version = "0.1.0"
edition = "2018"
readme = "readme.md"
description = "Helpers for compiling mruby"
documentation = "https://docs.rs/mrb-src/"
homepage = "https://github.com/oxidize-rb/mrb"
license = "MIT OR Apache-2.0"

[dependencies]
tar = "0.4.38"
reqwest = { version = "0.11.11", features = ["blocking"] }
flate2 = "1.0.24"
cc = "1.0.73"
